--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "preinstall": "npm i"
+    "start": "node ."
   },
   "author": "",
   "license": "ISC",
