--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 token="ODA5Mjk4NjkyODQ1NzMxODQx.YCTEJA.lNxpuhHQu729W0wzcZIT4EBAvRc"
+token2="ODE1ODYxNzI3NDI5Mzk0NDYy.YDykcQ.0LN1fDhA8FUCmuxjJ3M9l9BdEw0"
