--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "engines": {
     "node": "16.x",
     "npm": "7.x"
- },
+  },
   "scripts": {
-    "start": "node ."
+    "start": "node centuryweb/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "http": "^0.0.1-security",
     "path": "^0.12.7"
   },
   "devDependencies": {
